Fixed padding for text on mobile

--- a/main.css
+++ b/main.css
@@ -843,7 +843,7 @@ h3 {
   font-size: 20px;
 }
 #home-header h1 {
-  padding-left: 20%;
+  padding-left: 10%;
 }
 /* Mobile Home */
 #home {
